fix: use dns prefetch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
 		<link rel="alternate" type="application/rss+xml" title="Justin Beckwith" href="feed/" />
 		<link rel="stylesheet" href="/css/site.css">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
+		<link rel="dns-prefetch" href="https://yt3.ggpht.com">
+		<link rel="dns-prefetch" href="https://static.doubleclick.net">
+		<link rel="dns-prefetch" href="https://i.ytimg.com">
+		<link rel="dns-prefetch" href="https://www.google.com">
 	</head>
 	<body>
 		<div class="topbar"></div>
