fix: add a theme color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 		<link rel="dns-prefetch" href="https://static.doubleclick.net">
 		<link rel="dns-prefetch" href="https://i.ytimg.com">
 		<link rel="dns-prefetch" href="https://www.google.com">
+		<meta name="theme-color" content="#471949">
 	</head>
 	<body>
 		<div class="topbar"></div>
