--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 		<link rel="dns-prefetch" href="https://i.ytimg.com">
 		<link rel="dns-prefetch" href="https://www.google.com">
 		<meta name="theme-color" content="#471949">
+		<link rel="manifest" href="/manifest.json">
 	</head>
 	<body>
 		<div class="topbar"></div>
