feat: add ads why not

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,5 +81,6 @@
 				}
 			})();
 		</script>
+		<script data-ad-client="ca-pub-8519120219976378" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</body>
 </html>
